--- a/test_run_exp.ipynb
+++ b/test_run_exp.ipynb
@@ -43,6 +43,12 @@
       "TRAIN: loss 2.30258, acc 0.104667\n",
       "VALID: loss 2.30258, acc 0.100661\n",
       "TEST: loss 2.30258, acc 0.098057\n",
+      "********************************\n",
+      "********************************\n",
+      "Evaluating after 1 of 50 epochs...\n",
+      "TRAIN: loss 0.377709, acc 0.894832\n",
+      "VALID: loss 0.384405, acc 0.898137\n",
+      "TEST: loss 0.35511, acc 0.907552\n",
       "********************************\n"
      ]
     }
